# MassBalanceMachine

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  SUPPORT.md  config.py  data_processing.ipynb  environment.yml  environment_cpu.yml  environment_gpu.yml  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: CI.yml  CodeFormat.yml
Data Processing/: .gitignore  README.md
Data Processing/Misc/: stake_metadata.txt
Data Processing/Scripts/: clean_data.py  get_ERA5_monthly_pressure_data.py  get_climate_data.py  match_rgiids_with_stake.py  transform_data_to_wgms.py
OGGM/Scripts/: get_oggm_data.py
data_processing/: .gitignore  README.md
data_processing/scripts/: clean_data.py  get_ERA5_monthly_averaged_climate_data.py  get_ERA5_monthly_pressure_data.py  get_climate_data.py  get_stake_measurements.py  match_rgiids_with_stake.py  merg_stake_measurements.py  merge_rgiids.py  remove_nan_rgi_records.py  transform_data_to_wgms.py
docs/: api.rst  conf.py  contributing.rst  goals.rst  index.md  index.rst  install.rst  requirements.in  requirements.txt  structure.rst  support.rst  usage.rst
docs/project_info/: contributing.rst
massbalancemachine/: README.md  __init__.py  config.py
massbalancemachine/data_preprocessing/: __init__.py  iceland.py  wgms.py
massbalancemachine/data_processing/: Dataset.py  Product.py  __init__.py  climate_data_download.py  create_glacier_grid.py  get_climate_data.py  get_topo_data.py  glacier_utils.py  gridded_utils.py  oggm_utils.py  product_utils.py  sky_view_factor.py  transform_to_monthly.py  wgms.py
massbalancemachine/data_retrieval/: __init__.py  iceland.py
massbalancemachine/data_utils/: __init__.py  exploration_data.py  pre_processing_data.py
massbalancemachine/dataloader/: DataLoader.py  GeoDataLoader.py  SourceManager.py  VeryPoorlyNamedClass.py  __init__.py  correct_for_elevation.py  prepare_data.py
massbalancemachine/geodata/: GeoData.py  __init__.py
massbalancemachine/metrics/: __init__.py  metrics_utils.py
massbalancemachine/models/: CustomXGBoostRegressor.py  LSTM.py  LSTM_DAN.py  Model.py  NeuralNetworkRegressor.py  TorchNeuralNetworkRegressor.py  Transformer.py  __init__.py
massbalancemachine/notebooks/: data_processing.ipynb
massbalancemachine/plots/: __init__.py  input_plot.py  map_plots.py  perf_plots.py  profile_plots.py  style.py  temporal_plots.py  train_plots.py
massbalancemachine/sampling/: __init__.py  sinkhorn.py
massbalancemachine/training/: __init__.py  training.py
massbalancemachine/utils/: __init__.py  convert_to_wgms.py  data_exploration.py  exploration_data.py  pre_processing_data.py
massbalancemachine/xgboost_model/: CustomXGBoostRegressor.py  __init__.py
mbm/: README.md  __init__.py  environment.yml
mbm/data_processing/: Dataset.py  README.md  get_oggm_data.py
mbm/misc/: oggm_env.yml
mbm/notebooks/: data_exploration_and_visualization.ipynb  data_processing.ipynb  model_training_region.ipynb
mbm/scripts-data-exploration-and-visualisation/: aggregate_mass_balances.py
mbm/scripts-data-processing/: README.md  clean_data.py  feature_engineering.py  get_ERA5_monthly_averaged_climate_data.py  get_climate_data.py  match_rgiids_with_stake.py  remove_nan_rgi_records.py  reproject_coordinates.py  transform_data_to_wgms.py
mbm/scripts-model-training/: README.md  custom_xgboost_regressor.py  model_methods.py  plotting_methods.py  preparation_data.py
notebooks/: data_exploration.ipynb  data_preprocessing.ipynb  data_processing.ipynb  data_processing_custom.ipynb  data_processing_wgms.ipynb  date_exploration.ipynb  model_training.ipynb  model_training_neuralnetwork.ipynb  model_training_xgboost.ipynb  testing.ipynb  xgboost_model_training.ipynb
notebooks/.ipynb_checkpoints/: data_processing-checkpoint.ipynb
notebooks/example_data/: norway_wgms_dataset.csv  region_monthly.csv  wgms_documentation.md
notes/: Notes.txt  scores_4%_france.txt  scores_4%_france_2nd_try.txt  scores_4glacier_50%_norway.txt  scores_5-10%_3rd_try_france.txt  scores_50%_iceland.txt  scores_50%_kmeans_norway.txt  scores_63lat_northsouth_norway.txt  scores_7glaciers_5to10%_norway.txt  scores_7glaciers_5to10%_norway.txt.txt  scores_96%_france.txt  scores_eastwest_iceland.txt  scores_glacier8%_iceland.txt  scores_northsouth_norway.txt
oggm/: README.md
oggm/scripts/: get_oggm_data.py
regions/: README.md
regions/French_Alps/: 1.1 GLACIOCLIM-prepro.ipynb  1.1. GLACIOCLIM-prepro.ipynb  1.2. ERA5Land-prepro.ipynb  1.2. OGGM-datapulling.ipynb  1.3. ERA5Land-prepro.ipynb  3.1.1 Grid_search_LSTM_OOS_FR.ipynb  3.2. Train-ML-model.ipynb  3.2.2 Train-ML-model-NN copy 2.ipynb  3.2.2 Train-ML-model-NN.ipynb  3.2.2 Train-ML-model-NN_DANN.ipynb  3.2.2 Train-ML-model-NN_old.ipynb  3.2.2.a Train-ML-model-NN_all_regions.ipynb  3.2.3 Train-ML-model-NN_DANN.ipynb  3.2.3 Train-ML-model-NN_periodspecific.ipynb  3.2.4 Train-ML-model-NN_progressive_transfer nice.ipynb  (+7 more)
scripts/: common.py  export_to_huggingface.py
(+1162 files in other folders)
