[tool.poetry]
name = "massbalancemachine"
version = "0.0.1"
description = "A bridge between mass balance modelling and observations. Global machine learning glacier mass balance modelling that assimilates all glaciological and remote sensing data sources."
authors = ["Julian Biesheuvel <j.p.biesheuvel@student.tudelft.nl>"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [
    { include = "./massbalancemachine/"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "1.26.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
shapely = "^2.0.5"
matplotlib = "^3.9.1"
pillow = "^10.4.0"
netcdf4 = "^1.7.1.post1"
scikit-image = "^0.24.0"
configobj = "^5.0.8"
xarray = "^2024.6.0"
bottleneck = "^1.4.0"
scikit-learn = "^1.5.1"
pyproj = "^3.6.1"
cartopy = "^0.23.0"
rasterio = "^1.3.10"
geopandas = "^1.0.1"
rioxarray = "^0.17.0"
seaborn = "^0.13.2"
tables = "^3.9.2"
salem = "^0.3.11"
motionless = "^1.3.3"
ipython = "^8.26.0"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
sphinx = "^7.4.6"
sphinx-book-theme = "^1.1.3"
sphinx-intl = "^2.2.0"
sphinx-reredirects = "^0.1.5"
joblib = "^1.4.2"
progressbar2 = "^4.4.2"
oggm = "^1.6.1"
xgboost = "^2.1.0"
contextily = "^1.6.0"
dill = "^0.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.5"
black = "^24.4.2"
autopep8 = "^2.3.1"
tox = "^4.16.0"
mkdocs = "^1.6.0"
pandera = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"