[tool.poetry]
name = "massbalancemachine"
version = "0.0.1"
description = "A bridge between mass balance modelling and observations. Global machine learning glacier mass balance modelling that assimilates all glaciological and remote sensing data sources."
authors = ["Julian Biesheuvel", "Kamilla Hauknes Sjursen", "Marijn van der Meer", "Jordi Bolibar", "Alban Gossard"]
license = "MIT"
readme = "README.md"
package-mode = true
packages = [
    { include = "./massbalancemachine/"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
shapely = "^2.0.5"
matplotlib = "^3.9.1"
pillow = "^10.4.0"
netcdf4 = "^1.7.1.post1"
scikit-image = "^0.24.0"
configobj = "^5.0.8"
xarray = "^2024.6.0"
bottleneck = "^1.4.0"
scikit-learn = "^1.5.1"
pyproj = "^3.6.1"
cartopy = "^0.23.0"
rasterio = "^1.3.10"
geopandas = "^1.0.1"
rioxarray = "^0.17.0"
seaborn = "^0.13.2"
tables = "^3.9.2"
salem = "^0.3.11"
motionless = "^1.3.3"
ipython = "^8.26.0"
jupyter = "^1.0.0"
jupyterlab = "^4.3"
joblib = "^1.4.2"
progressbar2 = "^4.4.2"
oggm = "^1.6.1"
xgboost = "^2.1.0"
contextily = "^1.6.0"
dill = "^0.3.8"
pdoc = "^14.6.1"
tqdm = "^4.66.5"
cmcrameri = "^1.9"
torch = "2.2.2"
skorch = "^1.1.0"
cdsapi = "^0.7.4"
pytest = "^8.2.2"
pytest-cov = "^6.1.1"
zarr = "2.18.4"
pyarrow = "^19.0.1"
tensorboard = "^2.19.0"
torcheval = "^0.0.7"
pip-tools = "7.5.0"
pandoc = "2.4"
nbconvert = "7.16.6"
sphinxemoji = "^0.3.0"
numcodecs = "0.15.1"
torchsummary = "^1.5"
nbstripout = "^0.8.1"
joypy = "^0.2.6"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-book-theme = "^1.1.3"
sphinx-intl = "^2.2.0"
sphinx-reredirects = "^0.1.5"
sphinx-autobuild = "2025.8.25"
sphinx-autorun = "^1.1.1"
myst-parser = "^2.0"
nbsphinx = "^0.9"
ipykernel = "^6.0"
pandoc = "2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^6.1.1"
pylint = "^3.2.5"
black = "^24.4.2"
autopep8 = "^2.3.1"
tox = "^4.16.0"
ruff = "^0.6.2"
nbdime = "^4.0.1"
nbdev = "^2.3.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
